--- a/src/assets/css/Nav.css
+++ b/src/assets/css/Nav.css
@@ -2,8 +2,9 @@
 
 :root {
     --nav-color: rgba(10, 90, 255, 1);
-    --nav-font-size: 30px;
+    --nav-font-size: calc(15px + 2vmin);
     --nav-box-shadow: 0px 0px 9px 3px rgba(41, 41, 41, 0.25);
+    --navbar-height: 8vh;
 
     --ds-font: 'Dancing Script', 'cursive';
 }
@@ -12,13 +13,13 @@
 /* Direct */
 nav {
     position: fixed;
-    height: 8vh;
+    min-height: var(--navbar-height);
+    justify-content: space-around;
     width: 100%;
     background-color: var(--nav-color);
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    top: 0;
     box-shadow: var(--nav-box-shadow);
     z-index: 1000;
 }
@@ -26,14 +27,12 @@ nav {
 nav ul {
     display: flex;
     list-style-type: none;
+    justify-content: space-around;
     flex-direction: row;
-    margin-left: 200px;
+    width: 30%;
 }
 
 nav ul li {
-    padding: 15px;
-    margin: 5px;
-    border: 5px;
     font-family: var(--ds-font);
     font-weight: bold;
     font-size: var(--nav-font-size);
@@ -41,15 +40,14 @@ nav ul li {
 
 nav ul li a {
     color: white;
-}
-
-a {
     text-decoration: none;
 }
 
 .logo {
     margin-top: 9px;
     margin-left: 10px;
+    width: var(--nav-font-size);
+    height: auto;
 }
 
 .logo-text {
@@ -57,4 +55,66 @@ a {
     color: white;
     font-family: var(--ds-font);
     font-size: var(--nav-font-size);
+}
+
+.collapse {
+    display: none;
+    cursor: pointer;
+}
+
+.collapse div {
+    width: 25px;
+    height: 2px;
+    background-color: white;
+    margin: 5px;
+}
+
+@media screen and (max-width: 1180px) {
+    nav ul {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    nav ul {
+        position: absolute;
+        right: 0px;
+        height: calc( 100vh - var(--navbar-height) );
+        top: 8vh;
+        background-color: var(--nav-color);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+
+    nav ul li {
+        opacity: 0;
+    }
+
+    .collapse {
+        display: block;
+    }
+}
+
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
 }
