Added colors and font-size to Bio section; Added footer

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -55,6 +55,7 @@ nav ul li a {
     color: white;
     font-family: var(--ds-font);
     font-size: var(--nav-font-size);
+    text-decoration: none;
 }
 
 .collapse {
