Added contact form to contct component; Added projects to portfolio

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,3 +9,8 @@ footer {
     font-weight: bold;
     box-shadow: var(--nav-box-shadow);
 }
+
+footer a {
+    text-decoration: none;
+    color: white;
+}
