--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,121 +1,121 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
 
 :root {
-    --nav-color: rgba(10, 90, 255, 1);
-    --nav-font-size: calc(15px + 2vmin);
-    --nav-box-shadow: 0px 0px 9px 3px rgba(41, 41, 41, 0.25);
-    --navbar-height: 8vh;
+  --nav-color: rgba(10, 90, 255, 1);
+  --nav-font-size: calc(15px + 2vmin);
+  --nav-box-shadow: 0px 0px 9px 3px rgba(41, 41, 41, 0.25);
+  --navbar-height: 8vh;
 
-    --ds-font: 'Dancing Script', 'cursive';
+  --ds-font: "Dancing Script", "cursive";
 }
 
 /* SELECTORS */
 /* Direct */
 nav {
-    position: fixed;
-    min-height: var(--navbar-height);
-    justify-content: space-around;
-    width: 100%;
-    background-color: var(--nav-color);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    box-shadow: var(--nav-box-shadow);
-    z-index: 1000;
+  position: fixed;
+  min-height: var(--navbar-height);
+  justify-content: space-around;
+  width: 100%;
+  background-color: var(--nav-color);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  box-shadow: var(--nav-box-shadow);
+  z-index: 1000;
 }
 
 nav ul {
-    display: flex;
-    list-style-type: none;
-    justify-content: space-around;
-    flex-direction: row;
-    width: 30%;
+  display: flex;
+  list-style-type: none;
+  justify-content: space-around;
+  flex-direction: row;
+  width: 30%;
 }
 
 nav ul li {
-    font-family: var(--ds-font);
-    font-weight: bold;
-    font-size: var(--nav-font-size);
+  font-family: var(--ds-font);
+  font-weight: bold;
+  font-size: var(--nav-font-size);
 }
 
 nav ul li a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .logo {
-    margin-top: 9px;
-    margin-left: 10px;
-    width: var(--nav-font-size);
-    height: auto;
+  margin-top: 9px;
+  margin-left: 10px;
+  width: var(--nav-font-size);
+  height: auto;
 }
 
 .logo-text {
-    font-weight: bold;
-    color: white;
-    font-family: var(--ds-font);
-    font-size: var(--nav-font-size);
-    text-decoration: none;
+  font-weight: bold;
+  color: white;
+  font-family: var(--ds-font);
+  font-size: var(--nav-font-size);
+  text-decoration: none;
 }
 
 .collapse {
-    display: none;
-    cursor: pointer;
+  display: none;
+  cursor: pointer;
 }
 
 .collapse div {
-    width: 25px;
-    height: 2px;
-    background-color: white;
-    margin: 5px;
+  width: 25px;
+  height: 2px;
+  background-color: white;
+  margin: 5px;
 }
 
 @media screen and (max-width: 1180px) {
-    nav ul {
-        width: 50%;
-    }
+  nav ul {
+    width: 50%;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    body {
-        overflow-x: hidden;
-    }
+  body {
+    overflow-x: hidden;
+  }
 
-    nav ul {
-        position: absolute;
-        right: 0px;
-        height: calc( 100vh - var(--navbar-height) );
-        top: 8vh;
-        background-color: var(--nav-color);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-    }
+  nav ul {
+    position: absolute;
+    right: 0px;
+    height: calc(100vh - var(--navbar-height));
+    top: 8vh;
+    background-color: var(--nav-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
 
-    nav ul li {
-        opacity: 0;
-    }
+  nav ul li {
+    opacity: 0;
+  }
 
-    .collapse {
-        display: block;
-    }
+  .collapse {
+    display: block;
+  }
 }
 
 .nav-active {
-    transform: translateX(0%);
+  transform: translateX(0%);
 }
 
 @keyframes navLinkFade {
-    from {
-        opacity: 0;
-        transform: translateX(50px);
-    }
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
 
-    to {
-        opacity: 1;
-        transform: translateX(0px);
-    }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
